--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -267,29 +267,29 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\UnitTest.js\bootup.js" />
-    <None Include="..\UnitTest.js\CameraTest\Blit.frag.glsl">
+    <None Include="..\UnitTest\bootup.js" />
+    <None Include="..\UnitTest\CameraTest\Blit.frag.glsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\UnitTest.js\CameraTest\bootup.js" />
-    <None Include="..\UnitTest.js\CameraTest\CameraTest.js" />
-    <None Include="..\UnitTest.js\CameraTest\Quad.vert.glsl">
+    <None Include="..\UnitTest\CameraTest\bootup.js" />
+    <None Include="..\UnitTest\CameraTest\CameraTest.js" />
+    <None Include="..\UnitTest\CameraTest\Quad.vert.glsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\UnitTest.js\CameraTest\Uvy844.frag.glsl">
+    <None Include="..\UnitTest\CameraTest\Uvy844.frag.glsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\UnitTest.js\CameraTest\Yuv8888.frag.glsl">
+    <None Include="..\UnitTest\CameraTest\Yuv8888.frag.glsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\UnitTest.js\CameraTest\Yuv8_88.frag.glsl">
+    <None Include="..\UnitTest\CameraTest\Yuv8_88.frag.glsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\UnitTest.js\Common\PopEngine.js" />
-    <None Include="..\UnitTest.js\Common\PopShaderCache.js" />
-    <None Include="..\UnitTest.js\Common\TFrameCounter.js" />
-    <None Include="..\UnitTest.js\HttpServer\bootup.js" />
-    <None Include="..\UnitTest.js\Readme.md">
+    <None Include="..\UnitTest\Common\PopEngine.js" />
+    <None Include="..\UnitTest\Common\PopShaderCache.js" />
+    <None Include="..\UnitTest\Common\TFrameCounter.js" />
+    <None Include="..\UnitTest\HttpServer\bootup.js" />
+    <None Include="..\UnitTest\Readme.md">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
