--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,6 @@
 [submodule "src/Ezsift"]
 	path = src/Ezsift
 	url = https://github.com/SoylentGraham/ezSIFT.git
-[submodule "UnitTest.js"]
+[submodule "UnitTest"]
 	path = UnitTest
 	url = https://github.com/NewChromantics/PopEngineUnitTests.git
