Re-added submodule
Former-commit-id: d8dcf3429f190ee38f69fdc033a2b63f45357537

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/Ezsift"]
 	path = src/Ezsift
 	url = https://github.com/SoylentGraham/ezSIFT.git
+[submodule "UnitTest"]
+	path = UnitTest
+	url = https://github.com/NewChromantics/PopEngineUnitTests.git
