Integrated PopH264 (9fdae6)as C lib. PopCameraDevice 6495eb
Former-commit-id: babff81b72284c37b27de529e674fd155ee3bdc7

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -31,7 +31,7 @@
     </ClCompile>
     <Link>
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
-      <DelayLoadDLLs>PopCameraDevice.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>PopCameraDevice.dll;PopH264.dll</DelayLoadDLLs>
       <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
