--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="Libs\PopH264">
       <UniqueIdentifier>{273f9977-6262-471b-8ac7-9353c46af383}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UnitTest\VideoTest">
+      <UniqueIdentifier>{25602702-08b3-4195-adff-9693cd729153}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\PopMain.h">
@@ -386,6 +389,45 @@
     <None Include="..\src\Libs\PopH264\PopH264.dll.meta">
       <Filter>Libs\PopH264</Filter>
     </None>
+    <None Include="..\UnitTest\VideoTest\Uvy844.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Video.js">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\VideoTest.js">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Yuv8_8_8.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Yuv8_8_8_MultiImage.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Yuv8_88.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Yuv8888.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Blit.frag.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\bootup.js">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\mp4.js">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\PopBrowser.js">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Quad.vert.glsl">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
+    <None Include="..\UnitTest\VideoTest\Readme.md">
+      <Filter>UnitTest\VideoTest</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp">
@@ -590,14 +632,19 @@
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\JavaScriptCore.dll">
       <Filter>Libs\JavascriptCore\win64</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll">
-      <Filter>Libs\JavascriptCore\win64</Filter>
-    </CustomBuild>
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\pthreadsVC2.dll">
       <Filter>Libs\JavascriptCore\win64</Filter>
     </CustomBuild>
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\WTF.dll">
       <Filter>Libs\JavascriptCore\win64</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll">
+      <Filter>Libs\PopCameraDevice</Filter>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\UnitTest\VideoTest\ToyStory4_Baseline3.mp4">
+      <Filter>UnitTest\VideoTest</Filter>
+    </Media>
   </ItemGroup>
 </Project>
