Providing C api bridge from JScore to v8
Former-commit-id: a30ed6c21c259fa2f4af75bff6778e0483358cda

--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -2,7 +2,7 @@
 //#include "PopApp.xcconfig"
 
 
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL //JSAPI_V8
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL JSAPI_V8
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
 V8_PATH = $(SRCROOT)/src/v8
