--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -647,7 +647,9 @@
     <CustomBuild Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll">
       <Filter>Libs\PopCameraDevice</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\src\Libs\PopH264\PopH264.dll" />
+    <CustomBuild Include="..\src\Libs\PopH264\PopH264.dll">
+      <Filter>Libs\PopH264</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\UnitTest\VideoTest\ToyStory4_Baseline3.mp4">
