Turned off Whole Program Optimisation which removed some symbols, notably the unlinked JSCore ones
Former-commit-id: 5164bbde766d58d683cb6b017a07970c4f3227d2

--- a/PopEngine.visualstudio/Release.props
+++ b/PopEngine.visualstudio/Release.props
@@ -7,7 +7,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <WholeProgramOptimization>true</WholeProgramOptimization>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
