added runtime files, windows and osx have different binary snapshot files
Former-commit-id: 043c96406cbbbe64a6813a21ae488ec558bf771a

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -376,6 +376,15 @@
     <CustomBuild Include="..\src\v8\lib\icuuc.dll">
       <FileType>Document</FileType>
     </CustomBuild>
+    <CustomBuild Include="..\src\v8\v8Runtime\icudtl.dat">
+      <FileType>Document</FileType>
+    </CustomBuild>
+    <CustomBuild Include="..\src\v8\v8Runtime\natives_blob.bin">
+      <FileType>Document</FileType>
+    </CustomBuild>
+    <CustomBuild Include="..\src\v8\v8Runtime\snapshot_blob_win64.bin">
+      <FileType>Document</FileType>
+    </CustomBuild>
     <None Include="..\UnitTest\bootup.js" />
     <None Include="..\UnitTest\CameraTest\Blit.frag.glsl">
       <FileType>Document</FileType>
