--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -512,6 +512,15 @@
     <None Include="..\src\v8\lib\icuuc.dll">
       <Filter>Libs\v8\Lib</Filter>
     </None>
+    <None Include="..\src\v8\v8Runtime\natives_blob.bin">
+      <Filter>Libs\v8\Runtime</Filter>
+    </None>
+    <None Include="..\src\v8\v8Runtime\icudtl.dat">
+      <Filter>Libs\v8\Runtime</Filter>
+    </None>
+    <None Include="..\src\v8\v8Runtime\snapshot_blob_win64.bin">
+      <Filter>Libs\v8\Runtime</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp">
